name:                hctrie
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
copyright:           2015 (C) Alexander Vershilov
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.TrieMap
                       LCB.Parse
                       LCB.Utils
                       LCB.Generate
                       Language.C.Generate.Types
                       Language.C.Generate.Parse
                       Language.C.Generate
  default-extensions:  OverloadedStrings
  -- other-modules:       
  other-extensions:    ExistentialQuantification
                       TupleSections
                       DeriveDataTypeable
                       StandaloneDeriving
  build-depends:       base >=4.7 && <4.8,
                       containers >= 0.5,

                       wl-pprint-text,
                       -- parse
                       text,
                       attoparsec >= 0.12.1.2,
                       bytestring >= 0.10

  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

executable hctrie
  main-is:             Main.hs
  other-modules:       LCB.Generate
  build-depends:       base >= 4.7 && < 5,
                       hctrie,
                       options >= 1.2,
		       -- I don't know why I need it:
                       containers >= 0.5,
                       -- parse
                       attoparsec >= 0.12.1.2,
                       bytestring >= 0.10,
		       -- fixme
                       text,
                       wl-pprint-text
 
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
